--- a/data/sources/productboard.yaml
+++ b/data/sources/productboard.yaml
@@ -1430,3 +1430,27 @@ series:
         url: https://www.meetup.com/productboard-meetups/events/286390674/
         dtstart: 2022-06-21 18:00:00+02:00
         dtend: 2022-06-21 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Data Meetup | PRG
+        description: 'Productboard Meetups
+
+          Tuesday, June 21 at 6:00 PM
+
+
+          **Productboard''s first Data Meetup is here!** ## About this event During the pandemic, we moved into new offices, which have already been named Best S...
+
+
+          https://www.meetup.com/productboard-meetups/events/286390674/'
+        location: Productboard (Boudníkova 2506/3, Praha 8-Libeň, Czech Republic 180 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286390674@meetup.com
+        url: https://www.meetup.com/productboard-meetups/events/286390674/
+        dtstart: 2022-06-21 18:00:00+02:00
+        dtend: 2022-06-21 21:00:00+02:00
