--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -2285,3 +2285,51 @@ series:
         url: https://www.meetup.com/typedb-prague/events/286113510/
         dtstart: 2022-06-21 18:30:00+02:00
         dtend: 2022-06-21 19:30:00+02:00
+  - meetupcom:
+      meta_description: 'Tue, Jul 5, 6:30 PM  CEST: Semantic Web technologies enable us to represent and query for very complex and heterogeneous datasets. We can add semantics and reason over large bodies of data on the web'
+      og_title: Comparing Semantic Web Technologies to TypeDB, Tue, Jul 5, 2022, 6:30 PM   | Meetup
+      url: https://www.meetup.com/typedb-prague/events/286749064/
+      ical:
+        summary: Comparing Semantic Web Technologies to TypeDB
+        description: 'TypeDB Prague Engineers
+
+          Tuesday, July 5 at 6:30 PM
+
+
+          Semantic Web technologies enable us to represent and query for very complex and heterogeneous datasets. We can add semantics and reason over large bod...
+
+
+          https://www.meetup.com/typedb-prague/events/286749064/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286749064@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/286749064/
+        dtstart: 2022-07-05 18:30:00+02:00
+        dtend: 2022-07-05 19:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: TypeDB Academy - Getting Started with Schema Design
+        description: 'TypeDB Prague Engineers
+
+          Tuesday, June 21 at 6:30 PM
+
+
+          In this (https://docs.vaticle.com/docs/general/quickstart), we start by gaining an understanding of the fundamental components of TypeDB''s type system...
+
+
+          https://www.meetup.com/typedb-prague/events/286113510/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286113510@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/286113510/
+        dtstart: 2022-06-21 18:30:00+02:00
+        dtend: 2022-06-21 19:30:00+02:00
