--- a/data/sources/naswp-cz.yaml
+++ b/data/sources/naswp-cz.yaml
@@ -4448,14 +4448,14 @@ series:
         dtstart: 2022-02-26 09:15:00+01:00
         dtend: 2022-02-26 18:00:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Jun 28, 6:30 PM  CEST: **Před začátkem léta stihneme ještě malý piknik na zahradě Břevnovského kláštera.** Vezměte si deku :) Studené pivo a nějaké základní občerstvení se dá zakoupit v "okénku" '
-      og_title: 'WordPress piknik Praha #34, Tue, Jun 28, 2022, 6:30 PM   | Meetup'
+      meta_description: 'Wed, Jun 29, 6:30 PM  CEST: **Před začátkem léta stihneme ještě malý piknik na zahradě Břevnovského kláštera.** Vezměte si deku :) Studené pivo a nějaké základní občerstvení se dá zakoupit v "okénku" '
+      og_title: 'WordPress piknik Praha #34, Wed, Jun 29, 2022, 6:30 PM   | Meetup'
       url: https://www.meetup.com/naswp-cz/events/286754279/
       ical:
         summary: 'WordPress piknik Praha #34'
         description: 'NášWP WordPress komunita
 
-          Tuesday, June 28 at 6:30 PM
+          Wednesday, June 29 at 6:30 PM
 
 
           **Před začátkem léta stihneme ještě malý piknik na zahradě Břevnovského kláštera.** Vezměte si deku :) Studené pivo a nějaké základní občerstvení se d...
@@ -4469,8 +4469,32 @@ series:
         status: CONFIRMED
         uid: event_286754279@meetup.com
         url: https://www.meetup.com/naswp-cz/events/286754279/
-        dtstart: 2022-06-28 18:30:00+02:00
-        dtend: 2022-06-28 21:30:00+02:00
+        dtstart: 2022-06-29 18:30:00+02:00
+        dtend: 2022-06-29 21:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'WordPress pivo Praha #33 - naživo!'
+        description: 'NášWP WordPress komunita
+
+          Wednesday, May 25 at 7:00 PM
+
+
+          Tradiční sraz místní WordPressové komunity - poslední středa v měsíci. Tentokrát bez přednášky, protože jsme se dlouho neviděli naživo. Sejdeme se na ...
+
+
+          https://www.meetup.com/naswp-cz/events/285883947/'
+        location: Restaurace U Veverky (Eliášova 324, Praha 6-Bubeneč, Czech Republic 160 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_285883947@meetup.com
+        url: https://www.meetup.com/naswp-cz/events/285883947/
+        dtstart: 2022-05-25 19:00:00+02:00
+        dtend: 2022-05-25 22:00:00+02:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
