data: cron update

--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -4915,3 +4915,27 @@ series:
         url: https://www.meetup.com/asociace-ux/events/286240684/
         dtstart: 2022-06-06 18:00:00+02:00
         dtend: 2022-06-06 20:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'UX Monday: Jak se nezbláznit z Backlogu (Opportunity Solution Tree)'
+        description: 'Asociace UX
+
+          Monday, June 6 at 6:00 PM
+
+
+          ***Jak se při rozvoji produktů orientovat v nápadech, příležitostech a řešení, tak abyste se v nich neztratili a vybírali vždy takové, ke kterým budet...
+
+
+          https://www.meetup.com/asociace-ux/events/286240684/'
+        location: Na Valentince (Na Valentince, Praha 5-Smíchov, Czech Republic 150 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286240684@meetup.com
+        url: https://www.meetup.com/asociace-ux/events/286240684/
+        dtstart: 2022-06-06 18:00:00+02:00
+        dtend: 2022-06-06 20:00:00+02:00
