--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -2616,3 +2616,27 @@ series:
         url: https://www.meetup.com/typedb-prague/events/286113864/
         dtstart: 2022-06-23 18:30:00+02:00
         dtend: 2022-06-23 19:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: TypeDB Academy | Inference with Rules
+        description: 'TypeDB Prague Engineers
+
+          Thursday, June 23 at 6:30 PM
+
+
+          Build your skills and learn how TypeDB''s native inference engine works. **Good for:**\\- Beginners to (https://docs.vaticle.com/docs/general/quickstart...
+
+
+          https://www.meetup.com/typedb-prague/events/286113864/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286113864@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/286113864/
+        dtstart: 2022-06-23 18:30:00+02:00
+        dtend: 2022-06-23 19:30:00+02:00
