--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -1753,9 +1753,9 @@ series:
         dtstart: 2022-06-09 18:30:00+02:00
         dtend: 2022-06-09 19:30:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Jun 28, 6:30 PM  CEST: Loading a lot of data into a graph database is not a trivial exercise. TypeDB Loader (formerly known as GraMi) was developed to allow large-scale data import into TypeDB, a'
-      og_title: Loading Huge Amounts of Data, Tue, Jun 28, 2022, 6:30 PM   | Meetup
-      url: https://www.meetup.com/typedb-prague/events/286133573/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Loading Huge Amounts of Data
         description: 'TypeDB Prague Engineers
@@ -1763,7 +1763,7 @@ series:
           Tuesday, June 28 at 6:30 PM
 
 
-          Loading a lot of data into a graph database is not a trivial exercise. TypeDB Loader (formerly known as GraMi) was developed to allow large-scale data...
+          **THIS EVENT HAS BEEN POSTPONED**A new date will be sent soon \\*\\*\\*\\*\\*\\*\\*\\*\\*\\*\\*\\*\\*\\*\\*\\*\\*\\*\\*\\*\\*\\*\\*\\*\\*\\*\\*\\*\\*\\*\\*\\*\\*\\* Loading a lot of da...
 
 
           https://www.meetup.com/typedb-prague/events/286133573/'
