--- a/data/sources/pipedrive-prague.yaml
+++ b/data/sources/pipedrive-prague.yaml
@@ -6514,3 +6514,51 @@ series:
         url: https://www.meetup.com/pipedrive-talks-prague/events/280151778/
         dtstart: 2021-09-14 18:00:00+02:00
         dtend: 2021-09-14 23:00:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, Jul 28, 6:00 PM  CEST: It''s mid-summer and so we’ve decided to make our next meetup a bit more lighthearted than usual. Join our upcoming engineering meetup, where we will exchange entertaining a'
+      og_title: 'Engineering Meetup: Screw-ups and Lessons Learned, Thu, Jul 28, 2022, 6:00 PM   | Meetup'
+      url: https://www.meetup.com/pipedrive-talks-prague/events/286919614/
+      ical:
+        summary: 'Engineering Meetup: Screw-ups and Lessons Learned'
+        description: 'Pipedrive Talks Prague
+
+          Thursday, July 28 at 6:00 PM
+
+
+          It''s mid-summer and so we’ve decided to make our next meetup a bit more lighthearted than usual. Join our upcoming engineering meetup, where we will e...
+
+
+          https://www.meetup.com/pipedrive-talks-prague/events/286919614/'
+        location: Pipedrive (Pernerova 697/35, Karlín, Praha-Praha 8, Czech Republic 186 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286919614@meetup.com
+        url: https://www.meetup.com/pipedrive-talks-prague/events/286919614/
+        dtstart: 2022-07-28 18:00:00+02:00
+        dtend: 2022-07-28 20:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Engineering Meetup: From Developer to a Leader'
+        description: 'Pipedrive Talks Prague
+
+          Tuesday, April 5 at 6:00 PM
+
+
+          One possible career path for engineers is leadership: technical leadership, people management, or both. Typically you’d start by mentoring other engin...
+
+
+          https://www.meetup.com/pipedrive-talks-prague/events/284508613/'
+        location: Pipedrive (Pernerova 697/35, Karlín, Praha-Praha 8, Czech Republic 186 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_284508613@meetup.com
+        url: https://www.meetup.com/pipedrive-talks-prague/events/284508613/
+        dtstart: 2022-04-05 18:00:00+02:00
+        dtend: 2022-04-05 20:00:00+02:00
