--- a/data/sources/fsharping.yaml
+++ b/data/sources/fsharping.yaml
@@ -6496,9 +6496,9 @@ series:
         dtstart: 2020-02-25 18:00:00+01:00
         dtend: 2020-02-25 21:00:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Aug 4, 6:00 PM  CEST: Like every summer, we will have a beer session somewhere in Prague to chat about F#, community, conferences, projects, and other great things (not only) from the IT world a'
-      og_title: FSharping |> Beer, Wed, Aug 4, 2021, 6:00 PM   | Meetup
-      url: https://www.meetup.com/fsharping/events/279609755/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: FSharping |> Beer
         description: 'FSharping
@@ -6519,9 +6519,9 @@ series:
         dtstart: 2021-08-04 18:00:00+02:00
         dtend: 2021-08-04 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Aug 19, 6:00 PM  CEST: Like every summer, we will have a beer session somewhere in Prague to chat about F#, community, conferences, projects and other great things (not only) from IT world and fu'
-      og_title: FSharping |> Beer, Wed, Aug 19, 2020, 6:00 PM   | Meetup
-      url: https://www.meetup.com/fsharping/events/271789552/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: FSharping |> Beer
         description: 'FSharping
@@ -6542,9 +6542,9 @@ series:
         dtstart: 2020-08-19 18:00:00+02:00
         dtend: 2020-08-19 23:00:00+02:00
   - meetupcom:
-      meta_description: 'Fri, Jun 5, 11:00 AM  CEST: 5. června nás čeká již třetí ročník virtuální konference fsharpConf, organizované lidmi z @fsharponline. Můžete se těšit na F# experty z celého světa. Uvidíte praktické vyu'
-      og_title: fsharpConf 2020, Fri, Jun 5, 2020, 11:00 AM   | Meetup
-      url: https://www.meetup.com/fsharping/events/270899664/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: fsharpConf 2020
         description: 'FSharping
@@ -6566,17 +6566,9 @@ series:
         dtstart: 2020-06-05 11:00:00+02:00
         dtend: 2020-06-05 22:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Feb 25, 6:00 PM  CET: We would like to invite you to our very first FShaping Functional Programming workshop.
-
-
-        ==== Basic information ====
-
-
-        Workshop is planned for 3 hours.
-
-        We will start at 18:0'
-      og_title: 'Josef Starýchfojtů: Advanced FP in F# (Workshop), Tue, Feb 25, 2020, 6:00 PM   | Meetup'
-      url: https://www.meetup.com/fsharping/events/268054108/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: 'Josef Starýchfojtů: Advanced FP in F# (Workshop)'
         description: 'FSharping
