data: cron update

--- a/data/sources/strv.yaml
+++ b/data/sources/strv.yaml
@@ -7723,3 +7723,27 @@ series:
         url: https://www.meetup.com/strv-meetups/events/286417910/
         dtstart: 2022-06-15 19:00:00+02:00
         dtend: 2022-06-15 22:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: STRV Web3 Meetup Vol. 2
+        description: 'STRV Meetups
+
+          Wednesday, June 15 at 7:00 PM
+
+
+          **💥 (https://www.eventbrite.com/e/strv-web3-meetup-vol-2-tickets-359472159907?aff=meetup) 💥** Join this month’s royal edition of our STRV Web3 Meetups...
+
+
+          https://www.meetup.com/strv-meetups/events/286417910/'
+        location: STRV Prague (Rohanske nabrezi 678/23, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286417910@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/286417910/
+        dtstart: 2022-06-15 19:00:00+02:00
+        dtend: 2022-06-15 22:00:00+02:00
